--- a/llm_supercli/package.json
+++ b/llm_supercli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llm-supercli",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "A powerful multi-provider LLM command line interface",
   "bin": {
     "llm": "./bin/llm",
@@ -9,7 +9,16 @@
   "scripts": {
     "postinstall": "node scripts/postinstall.js"
   },
-  "keywords": ["llm", "cli", "ai", "groq", "openrouter", "gemini", "qwen", "ollama"],
+  "keywords": [
+    "llm",
+    "cli",
+    "ai",
+    "groq",
+    "openrouter",
+    "gemini",
+    "qwen",
+    "ollama"
+  ],
   "author": "",
   "license": "MIT",
   "repository": {
