--- a/llm_supercli/package.json
+++ b/llm_supercli/package.json
@@ -1,7 +1,8 @@
 {
   "name": "llm-supercli",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "A powerful multi-provider LLM command line interface",
+  "readme": "README.md",
   "bin": {
     "llm": "./bin/llm",
     "llm-supercli": "./bin/llm-supercli"
