--- a/llm_supercli/pyproject.toml
+++ b/llm_supercli/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "httpx>=0.25.0",
     "click>=8.0.0",
     "prompt_toolkit>=3.0.0",
+    "packaging>=21.0",
 ]
 
 [project.optional-dependencies]
