--- a/llm_supercli/package.json
+++ b/llm_supercli/package.json
@@ -8,7 +8,8 @@
     "scripts/",
     "README.md",
     "pyproject.toml",
-    "requirements.txt"
+    "requirements.txt",
+    "llm.png"
   ],
   "bin": {
     "llm": "./bin/llm",
