--- a/llm_supercli/.gitignore
+++ b/llm_supercli/.gitignore
@@ -54,3 +54,7 @@ mcp_servers.json
 
 # Hypothesis (property-based testing cache)
 .hypothesis/
+
+# Allure test reporting
+allure-results/
+allure-report/
